welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: value update is not a member of java.awt.Color
	if (getCouleurSol()=Color.lightGray) CasePrec=CasePrec+1
            ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if (CasePrec=2) avance;
                    ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
	if (CasePrec=3) CasePrec=0
                    ^